# my_compiler

./: CHANGELOG.md  my-compiler.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
dist-newstyle/packagedb/ghc-9.4.2/: my-compiler-0.1.0.0-inplace.conf  package.cache
src/: Binary_string_transmitter.hs  Caesar.hs  Countdown.hi  Countdown.hs  FPtwelve.hs  Functions.hs  Hangman.hs  Life.hs  MyLib.hs  NewFile.hs  Nim.hs  Sudoku.hs  VotingAlgorithms.hs
